Bug 416335 - Unable to save brush settings without option "strength"
Summary: Unable to save brush settings without option "strength"
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 4.2.8
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-16 12:48 UTC by Vamdi
Modified: 2020-01-28 09:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vamdi 2020-01-16 12:48:24 UTC
SUMMARY

Brush setting.
When option "strength" is turn off in new brush modification, after saving it appear turn on in that new brush.


SOFTWARE/OS VERSIONS
Windows: 10
Comment 1 Halla Rempt 2020-01-16 12:54:52 UTC
Yes, I can confirm this bug.
Comment 2 Halla Rempt 2020-01-16 14:42:24 UTC
Git commit 828283f2d89cd08b3cc3b9a54719d742c0d45694 by Boudewijn Rempt.
Committed on 16/01/2020 at 14:42.
Pushed by rempt into branch 'master'.

Remove the strength compatibility with older paintop presets

This simply didn't work and always enabled strength.

M  +0    -34   plugins/paintops/libpaintop/kis_pressure_texture_strength_option.cpp
M  +0    -3    plugins/paintops/libpaintop/kis_pressure_texture_strength_option.h

https://invent.kde.org/kde/krita/commit/828283f2d89cd08b3cc3b9a54719d742c0d45694
Comment 3 Halla Rempt 2020-01-28 09:50:29 UTC
Git commit aa7100a408496c1b2795d9f6edec3fd0a04c79ef by Boudewijn Rempt.
Committed on 28/01/2020 at 09:10.
Pushed by rempt into branch 'krita/4.2'.

Remove the strength compatibility with older paintop presets

This simply didn't work and always enabled strength.
(cherry picked from commit 828283f2d89cd08b3cc3b9a54719d742c0d45694)

M  +0    -34   plugins/paintops/libpaintop/kis_pressure_texture_strength_option.cpp
M  +0    -3    plugins/paintops/libpaintop/kis_pressure_texture_strength_option.h

https://invent.kde.org/kde/krita/commit/aa7100a408496c1b2795d9f6edec3fd0a04c79ef