Remove the strength compatibility with older paintop presets

This simply didn't work and always enabled strength.

BUG:416335
(cherry picked from commit 828283f2d89cd08b3cc3b9a54719d742c0d45694)